--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "justjava-api",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Backend for JustJava, a sample food delivery application for a coffee shop.",
   "author": "Mark Njung'e",
   "license": "MIT",
@@ -27,6 +27,7 @@
     "@nestjs/platform-fastify": "^6.1.1",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.2.0",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.2",
     "class-validator": "^0.9.1",
@@ -39,6 +40,7 @@
     "google-auth-library": "^5.5.1",
     "ioredis": "^4.14.1",
     "moment": "^2.24.0",
+    "node-forge": "^0.9.1",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
