--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "justjava-api",
-  "version": "0.3.1",
+  "version": "1.0.0",
   "description": "Backend for JustJava, a sample food delivery application for a coffee shop.",
   "author": "Mark Njung'e",
   "license": "MIT",
@@ -37,6 +37,7 @@
     "fastify-file-upload": "^2.0.1",
     "fastify-rate-limit": "^2.2.0",
     "fastify-swagger": "^2.4.0",
+    "firebase-admin": "^8.8.0",
     "google-auth-library": "^5.5.1",
     "ioredis": "^4.14.1",
     "moment": "^2.24.0",
@@ -45,6 +46,7 @@
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
+    "shortid": "^2.2.15",
     "slugify": "^1.3.5",
     "typeorm": "^0.2.20",
     "winston": "^3.2.1"
